--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^19.2.0",
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
+    "react-is": "^19.2.3",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.9.6",
     "recharts": "^3.5.0",
